--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "txtzip",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "Text file bundling tool that preserves file structure",
   "main": "dist/index.js",
   "type": "module",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "ignore": "^5.3.2",
+    "minimatch": "^9.0.0",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
@@ -23,7 +24,7 @@
     "@types/yargs": "^17.0.33",
     "typescript": "^5.5.4"
   },
-"repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/nightness/txtzip.git"
   },
